Fix sketchboard color and modify gridSize Picker slider

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body class="bglight">
-    <div id="header" class="textlight">Etch-a-Sketch</div>
+    <div id="header" class="textlight hflight">Etch-a-Sketch</div>
     <div id="main">
         <div id="container1">
             <div id="menu" class="textlight">
@@ -18,7 +18,7 @@
                 </div>
             <div id="gridContainer" class="menuItem menulight">
                 <label for="gridsize" id="gridLabel">16 x 16</label>
-                <input type="range" name="gridsize" id="gridSize" class="borderlight" min="16" max="100" value="16">
+                <input type="range" name="gridsize" id="gridSize" class="sliderlight" min="16" max="100" value="16">
                 <button id="gridSizeButton" class="borderlight menuButton textlight">Size</button>
             </div>
             <div id="eraserContainer" class="menuItem menulight">
@@ -28,10 +28,10 @@
                 <button id="clearButton" class="borderlight menuButton textlight">Clear</button>
             </div>
         </div>
-        <div id="sketchBoard"></div>
+        <div id="sketchBoard" class="shadowlight"></div>
     </div>
     </div>
-    <div id="footer" class="textlight">
+    <div id="footer" class="textlight hflight">
         <div id="copyRights">
             Copyright @ 
             <a href="https://github.com/ahmedraza420" id="contactLink" target="_blank">
