--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body class="bglight">
-    <div id="header" class="textlight hflight">Etch-a-Sketch</div>
+<body class="light bglight textlight">
+    <div id="header" class="textlight hflight"><div id="title">Etch-a-Sketch</div></div>
     <div id="main">
         <div id="container1">
             <div id="menu" class="textlight">
-                <div id="colorContainer" class="menuItem menulight">
-                    <span id="colorDisplay" class="borderlight"></span>
-                    <input type="color" name="colorPicker" id="colorPicker" class="borderlight">
-                    <button id="colorPickerButton" class="borderlight menuButton textlight">Color</button>
+                <div id="gridContainer" class="menuItem menulight">
+                    <label for="gridsize" id="gridLabel">16 x 16</label>
+                    <input type="range" name="gridsize" id="gridSize" class="sliderlight" min="16" max="100" value="16">
                 </div>
-            <div id="gridContainer" class="menuItem menulight">
-                <label for="gridsize" id="gridLabel">16 x 16</label>
-                <input type="range" name="gridsize" id="gridSize" class="sliderlight" min="16" max="100" value="16">
-                <button id="gridSizeButton" class="borderlight menuButton textlight">Size</button>
-            </div>
+                <div id="colorContainer" class="menuItem menulight">
+                    <!-- <span id="colorDisplay" class="borderlight"></span> -->
+                    <input type="color" name="colorPicker" id="colorPicker" class="borderlight" value="#183D3D">
+                    <button id="colorPickerButton" class="borderlight buttonlight menuButton textlight">Color</button>
+                </div>
             <div id="eraserContainer" class="menuItem menulight">
-                <button id="eraserButton" class="borderlight menuButton textlight">Eraser</button>
+                <button id="eraserButton" class="borderlight buttonlight menuButton textlight">Eraser</button>
             </div>
             <div id="clearContainer" class="menuItem menulight">
-                <button id="clearButton" class="borderlight menuButton textlight">Clear</button>
+                <button id="clearButton" class="borderlight buttonlight menuButton textlight">Clear</button>
             </div>
+            </div>
+            <div id="sketchBoard" class="shadowlight"></div>
+            <div id="container1fixer"></div>
         </div>
-        <div id="sketchBoard" class="shadowlight"></div>
-    </div>
     </div>
     <div id="footer" class="textlight hflight">
         <div id="copyRights">
@@ -40,5 +40,6 @@
             </a>
         </div>
     </div>
+    <script src="script.js" defer></script>
 </body>
 </html>
