--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body class="light bglight textlight">
-    <div id="header" class="textlight hflight"><div id="title">Etch-a-Sketch</div></div>
+<body class="bglight textlight">
+    <div id="header" class="textlight hflight">
+        <div id="headerFixer"></div>
+        <div id="title">Etch-a-Sketch</div>
+        <div id="themeContainer" class="light">
+            <svg id='light' class="themeSelector" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 h-5 w-5 text-gray-400 group-hover:text-gray-500 dark:text-gray-300 dark:group-hover:text-gray-300 group-hover:text-gray-700" role="img" aria-labelledby="aes7hws6d3e3pid390k9fhqbfn2ew3sd"><title id="aes7hws6d3e3pid390k9fhqbfn2ew3sd">theme icon</title>
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"></path>
+            </svg>
+            <svg id='dark' class="themeSelector" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 h-5 w-5 text-gray-400 group-hover:text-gray-500 dark:text-gray-300 dark:group-hover:text-gray-300 group-hover:text-gray-700" role="img" aria-labelledby="asihdal0wo7bl817prrue0l7z6pvha6t"><title id="asihdal0wo7bl817prrue0l7z6pvha6t">theme icon</title>
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"></path>
+            </svg>
+        </div>
+    </div>
     <div id="main">
         <div id="container1">
             <div id="menu" class="textlight">
