Implement a responsive UI and touch events enabling mobile compatibility

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div id="container1">
             <div id="menu" class="textlight">
                 <div id="gridContainer" class="menuItem menulight">
-                    <label for="gridsize" id="gridLabel">16 x 16</label>
+                    <label for="gridsize" id="gridLabel" class="textlight">16 x 16</label>
                     <input type="range" name="gridsize" id="gridSize" class="sliderlight" min="16" max="100" value="16">
+                    <button id="gridSizeButton" class="borderlight buttonlight textlight menuButton">16 x 16</button>
                 </div>
                 <div id="colorContainer" class="menuItem menulight">
                     <input type="color" name="colorPicker" id="colorPicker" class="borderlight" value="#183D3D">
