--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="menu" class="textlight">
                 <div id="gridContainer" class="menuItem menulight">
                     <label for="gridsize" id="gridLabel" class="textlight">16 x 16</label>
-                    <input type="range" name="gridsize" id="gridSize" class="sliderlight" min="16" max="100" value="16">
+                    <input type="range" name="gridsize" id="gridSize" class="slider sliderlight" min="16" max="100" value="16">
                     <button id="gridSizeButton" class="borderlight buttonlight textlight menuButton">16 x 16</button>
                 </div>
                 <div id="colorContainer" class="menuItem menulight">
@@ -34,6 +34,10 @@
             <div id="eraserContainer" class="menuItem menulight">
                 <button id="eraserButton" class="borderlight buttonlight menuButton textlight">Eraser</button>
             </div>
+            <!-- <div id="intensityContainer" class="menuItem menulight">
+                <input type="range" id="colorIntensity" class="slider sliderlight" min="1" max="100" value="10" oninput="document.querySelector('#intensityDisplay').innerHTML = this.value+`%`">
+                <button id="intensityButton" class="borderlight buttonlight textlight menuButton">Intensity <span id="intensityDisplay">100%</span></button>
+            </div> -->
             <div id="clearContainer" class="menuItem menulight">
                 <button id="clearButton" class="borderlight buttonlight menuButton textlight">Clear</button>
             </div>
