Add Rainbow coloring Mode, Remove header/footer.
- added a rainbow mode in the current mode of skteching.
- in the rainbow mode, the drawing color doesn't change too randomly to
the transition of colors a little bit smooth.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body class="bglight textlight">
-    <div id="header" class="textlight hflight">
+    <div id="header" class="textlight ">
         <div id="headerFixer"></div>
         <div id="title">Etch-a-Sketch</div>
         <div id="themeContainer" class="light">
@@ -34,6 +34,9 @@
             <div id="eraserContainer" class="menuItem menulight">
                 <button id="eraserButton" class="borderlight buttonlight menuButton textlight">Eraser</button>
             </div>
+            <div id="rainbowContainer" class="menuItem menulight">
+                <button id="rainbowButton" class="borderlight buttonlight menuButton textlight">Rainbow</button>
+            </div>
             <!-- <div id="intensityContainer" class="menuItem menulight">
                 <input type="range" id="colorIntensity" class="slider sliderlight" min="1" max="100" value="10" oninput="document.querySelector('#intensityDisplay').innerHTML = this.value+`%`">
                 <button id="intensityButton" class="borderlight buttonlight textlight menuButton">Intensity <span id="intensityDisplay">100%</span></button>
@@ -46,7 +49,7 @@
             <div id="container1fixer"></div>
         </div>
     </div>
-    <div id="footer" class="textlight hflight">
+    <div id="footer" class="textlight">
         <div id="copyRights">
             Copyright @ 
             <a href="https://github.com/ahmedraza420" id="contactLink" target="_blank">
