--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
             <div id="menu" class="textlight">
                 <div id="gridContainer" class="menuItem menulight">
                     <label for="gridsize" id="gridLabel" class="textlight">16 x 16</label>
-                    <input type="range" name="gridsize" id="gridSize" class="slider sliderlight" min="16" max="100" value="16">
+                    <input type="range" name="gridsize" id="gridSize" class="slider sliderlight" min="16" max="100" value="16" oninput="document.querySelector('#gridSizeButton').innerText = `Size ${this.value} x ${this.value0}`">
                     <button id="gridSizeButton" class="borderlight buttonlight textlight menuButton">16 x 16</button>
                 </div>
                 <div id="colorContainer" class="menuItem menulight">
-                    <input type="color" name="colorPicker" id="colorPicker" class="borderlight" value="#183D3D">
-                    <button id="colorPickerButton" class="borderlight buttonlight menuButton textlight">Color</button>
+                    <button id="colorPickerButton" class="borderlight buttonlight menuButton textlight"><span id="colorFixer"></span>Color<input type="color" name="colorPicker" id="colorPicker" class="borderlight" value="#183D3D"></button>
                 </div>
             <div id="eraserContainer" class="menuItem menulight">
                 <button id="eraserButton" class="borderlight buttonlight menuButton textlight">Eraser</button>
