Fix minor issue

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="intensityContainer" class="menuItem menulight">
                 <input type="range" id="colorIntensity" class="slider sliderlight" min="1" max="100" value="10" oninput="document.querySelector('#intensityDisplay').innerHTML = this.value+`%`">
-                <button id="intensityButton" class="borderlight buttonlight textlight menuButton">Intensity <span id="intensityDisplay">100%</span></button>
+                <button id="intensityButton" class="borderlight buttonlight textlight menuButton">Shading <span id="intensityDisplay">100%</span></button>
             </div>
             <div id="clearContainer" class="menuItem menulight">
                 <button id="clearButton" class="borderlight buttonlight menuButton textlight">Clear</button>
