--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
                     <div id="clearContainer" class="menuItem menulight">
                         <button id="clearButton" class="borderlight buttonlight menuButton textlight">Clear</button>
                     </div>
-                    <div id="gridContainer" class="menuItem menulight">
-                        <label for="gridsize" id="gridLabel" class="textlight">16 x 16</label>
-                        <input type="range" name="gridsize" id="gridSize" class="slider sliderlight" min="16" max="100" value="16" oninput="const size = `${this.value} x ${this.value}`; document.querySelector('#gridSizeButton').innerText = 'Size '+size; document.querySelector('#gridLabel').innerText = size">
-                        <button id="gridSizeButton" class="borderlight buttonlight textlight menuButton">16 x 16</button>
-                    </div>
                 </div>
             </div>
-        <div id="sketchBoard" class="shadowlight"></div>
+            <div id="container3">
+                <div id="gridContainer" class="menuItem menulight">
+                <label for="gridsize" id="gridLabel" class="textlight">16 x 16</label>
+                <input type="range" name="gridsize" id="gridSize" class="slider sliderlight" min="16" max="100" value="16" oninput="const size = `${this.value} x ${this.value}`; document.querySelector('#gridSizeButton').innerText = 'Size '+size; document.querySelector('#gridLabel').innerText = size">
+                <button id="gridSizeButton" class="borderlight buttonlight textlight menuButton">16 x 16</button>
+                </div>
+                <div id="sketchBoard" class="shadowlight"></div>
+            </div>
         <div id="container1fixer"></div>
         </div>
     </div>
