Add Soft Eraser Mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div id="menu" class="textlight">
                     <div id="colorContainer" class="menuItem menulight">
-                        <button id="colorPickerButton" class="borderlight buttonlight menuButton textlight"><!--<span id="colorFixer"></span>-->Color</button>
+                        <button id="colorPickerButton" class="borderlight buttonlight menuButton textlight">Color</button>
                     </div>
                     <div id="eraserContainer" class="menuItem menulight">
                         <button id="eraserButton" class="borderlight buttonlight menuButton textlight">Eraser</button>
@@ -38,6 +38,9 @@
                     <div id="intensityContainer" class="menuItem menulight">
                         <input type="range" id="colorIntensity" class="slider sliderlight" min="1" max="100" value="10" oninput="document.querySelector('#intensityDisplay').innerHTML = this.value+`%`">
                         <button id="intensityButton" class="borderlight buttonlight textlight menuButton">Shading <span id="intensityDisplay">100%</span></button>
+                    </div>
+                    <div id="softContainer" class="menuItem menulight">
+                        <button id="softEraserButton" class="borderlight buttonlight menuButton textlight">Soft Eraser</button>
                     </div>
                     <div id="clearContainer" class="menuItem menulight">
                         <button id="clearButton" class="borderlight buttonlight menuButton textlight">Clear</button>
